@@ -9,6 +9,8 @@ Post-v21.03.0
   - Introduce ovn-controller incremetal processing engine statistics
   - Introduced parallel processing in ovn-northd with the NB_Global config option
     'use_parallel_build' to enable it.  It is disabled by default.
+  - Introduce a new "allow-stateless" ACL verb to always bypass connection
+    tracking. The existing "allow" verb behavior is left intact.
 
 OVN v21.03.0 - 12 Mar 2021
 -------------------------
